Bug 1037990 - AccessLabelKey is now accessible event if the element is detached. r=bzbarsky